# GoIT_WEB_HW_5

./: README.md  client.js  consumer.py  index.html  main.py  pyproject.toml  server.py
