[tool.poetry]
name = "goit-web-hw-5"
version = "0.1.0"
description = ""
authors = ["Serhii_Stepanov <stepa.sergey.nov@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_web_hw_5"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
